# astrocam

./: .gitignore  Todo.md  app.py  astro_tasks.py  astrocam.py  capture_service.py  cluster_txs.py  config.yml  coolerapp.py  equipment.json  focuser_service.py  image_data.py  image_processing_service.py  image_stretch.ipynb  measure-fwhm.ipynb  mount_service.py  phd_ctrl.py  plate-solve-demo.ipynb  plate-solve-demo2.ipynb  refine_location.ipynb  refine_location2.ipynb  refine_location3.ipynb  refine_location4.ipynb  requirements.txt  service_base.py  settings.py  setup.py  snap_process.py  test_fits.ipynb
Alpaca/: alpaca_base.py  camera.py  focuser.py  mount.py
CameraAPI/: CallBack.cpp  CameraAPI.cpp  CameraAPI.py  CameraAPI.sln  CameraAPI.vcxproj  CtrlSample.h  Function.cpp  Type0011.md3
asi_native/: asinative_camera.py
celestron/: focus_motor.py
debayer/: bilinear.ipynb  bilinear.py  debayer_model.py  fits.ipynb  nn_debayer.py  rggb_gen.ipynb  superpixel.py  vng.ipynb
fwhm/: align.ipynb  find_stars.py  fwhm.py  fwhm_experiment.ipynb  fwhm_pi_comp.ipynb  fwhm_shift.ipynb  star_centroid.py  star_finder.py  star_matcher.py  test.ipynb  test2.ipynb  test_alignment_func.ipynb  triangles.ipynb
indigo_devices/: CMakeLists.txt  app.c  indigo.py
simulated_devices/: simulated_camera.py  simulated_focuser.py  simulated_mount.py
skymap/: platesolver.py  simbad_query.py  skymap.py
stellarium_explore/: stellarium_screenshots.py
ui/: base_widget.py  cooler_widget.py  equipment_selector.py  focuser_widget.py  fwhm_widget.py  histogram_plot.py  image_container.py  (+1 more)
(+295 files in other folders)
